--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <title>Git Example</title>
 </head>
 <body>
-    <h1>Hello Git</h1>
-<h2>Next level</h2>
-    <h3>Next level 3</h3>
+
+<h1>Hello Html</h1>
 </body>
-<script scr="script.js"></script>
+<script src="script.js"></script>
 </html>
